[package]
name = "lowrez2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "0.3.26" }
specs = { version = "0.19.0 ", features = ["specs-derive"]}
specs-derive = { version = "0.4.1" }