[package]
name = "lowrez2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "0.3.11" }
macroquad-particles = { version = "0.1.2" }
# rand = "0.8.4"
# getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1", features = [ "inaccurate" ] }
keyframe = { version = "1.1" }
keyframe_derive = { version = "1.0" }
stopwatch-rs = "0.1.0"
tween = "2.0.1"
